--- a/PRG/RetoFinal/src/view/AdminWindow.fxml
+++ b/PRG/RetoFinal/src/view/AdminWindow.fxml
@@ -2,48 +2,56 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="274.0" prefWidth="409.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AdminWindowController">
+<AnchorPane id="AnchorPane" prefHeight="610.0" prefWidth="913.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminWindowController">
    <children>
-      <ImageView layoutX="150.0" layoutY="32.0">
-         <image>
-            <Image url="@../images/home_30dp_789DE5_FILL0_wght400_GRAD0_opsz24.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="191.0" layoutY="29.0" text="Home">
+      <Label layoutX="297.0" layoutY="24.0" prefHeight="44.0" prefWidth="356.0" text="STORE MANAGENENT">
          <font>
-            <Font size="25.0" />
+            <Font name="Arial Black" size="28.0" />
          </font>
       </Label>
-      <ImageView fitWidth="20.0" layoutX="23.0" layoutY="35.0">
+      <Label fx:id="labelWelcome" layoutX="25.0" layoutY="20.0" prefHeight="25.0" prefWidth="300.0" text="Welcome, [Admin]" />
+      <Label fx:id="labelBalance" layoutX="25.0" layoutY="45.0" prefHeight="20.0" prefWidth="300.0" style="-fx-text-fill: #5084C1;" text="Balance: 0.00€" />
+      <Label layoutX="25.0" layoutY="80.0" prefHeight="25.0" prefWidth="200.0" style="-fx-font-weight: bold;" text="Available Games" />
+      <TableView id="tableViewGames" fx:id="tableViewGames" layoutX="25.0" layoutY="110.0" prefHeight="350.0" prefWidth="872.0">
+         <columns>
+            <TableColumn fx:id="colTitle" prefWidth="250.0" text="Title" />
+            <TableColumn id="col" fx:id="colGenre" prefWidth="120.0" text="Genre" />
+            <TableColumn id="colPlataform" fx:id="colPlatform" prefWidth="120.0" text="Platform" />
+            <TableColumn id="colPrice" fx:id="colPrice" prefWidth="100.0" text="Price (€)" />
+            <TableColumn id="colPegi" fx:id="colPegi" prefWidth="100.0" text="Pegi" />
+            <TableColumn id="colStock" fx:id="colStock" prefWidth="100.0" text="Stock" />
+            <TableColumn id="colCompany" fx:id="colCompanyName" prefWidth="119.0" text="Company" />
+            <TableColumn id="colReleaseDate" fx:id="colReleaseDate" prefWidth="107.0" text="ReleaseDate" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Label layoutX="25.0" layoutY="480.0" prefHeight="17.0" prefWidth="100.0" text="Search game:" />
+      <TextField fx:id="textFieldSearch" layoutX="116.0" layoutY="475.0" prefHeight="25.0" prefWidth="200.0" promptText="Game name..." />
+      <Label layoutX="320.0" layoutY="480.0" prefHeight="17.0" prefWidth="60.0" text="Genre:" />
+      <TextField fx:id="textFieldGenre" layoutX="380.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
+      <Label layoutX="510.0" layoutY="480.0" prefHeight="17.0" prefWidth="80.0" text="Platform:" />
+      <TextField fx:id="textFieldPlatform" layoutX="590.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
+      <Button fx:id="buttonSearch" layoutX="720.0" layoutY="475.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Search" />
+      <Label layoutX="25.0" layoutY="520.0" prefHeight="25.0" prefWidth="150.0" style="-fx-font-weight: bold;" text="Selected game:" />
+      <Label fx:id="labelGameInfo" layoutX="180.0" layoutY="520.0" prefHeight="25.0" prefWidth="400.0" style="-fx-text-fill: #5084C1;" text="Select a game" />
+      <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="850.0" layoutY="15.0">
          <image>
-            <Image url="@../images/person_23dp_789DE5_FILL0_wght400_GRAD0_opsz24.png" />
+            <Image url="@../images/sports_esports_32dp_5084C1_FILL0_wght400_GRAD0_opsz40.png" />
          </image>
       </ImageView>
-      <Label fx:id="label_Username" layoutX="50.0" layoutY="39.0" text="Username" />
-      <Button fx:id="Button_LogOut" layoutX="313.0" layoutY="32.0" mnemonicParsing="false" onMouseClicked="#logOut" style="-fx-background-color: #f33f3f; -fx-border-color: #000000; -fx-font-weight: bold;" text="Log Out">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="add" layoutX="43.0" layoutY="97.0" mnemonicParsing="false" onMouseClicked="#addGame" prefHeight="36.0" prefWidth="330.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Add Game">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="modify" layoutX="43.0" layoutY="147.0" mnemonicParsing="false" onMouseClicked="#modifyGame" prefHeight="36.0" prefWidth="330.0" style="-fx-border-color: #000000; -fx-background-color: A7C4E5;" text="Modify Game">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="delete" layoutX="43.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#deleteGame" prefHeight="36.0" prefWidth="330.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Delete Game">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
+      <Button fx:id="buttonAdd" layoutX="25.0" layoutY="555.0" mnemonicParsing="false" onMouseClicked="#addGame" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Add Game" />
+      <Button fx:id="buttonExit" layoutX="755.0" layoutY="555.0" mnemonicParsing="false" onMouseClicked="#exit" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: F08080; -fx-border-color: #000000;" text="Exit" />
+      <Button fx:id="buttonModify" layoutX="165.0" layoutY="555.0" mnemonicParsing="false" onMouseClicked="#modifyGame" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Modify Game" />
+      <Button fx:id="buttonDelete" layoutX="297.0" layoutY="555.0" mnemonicParsing="false" onMouseClicked="#deleteGame" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Delete Game" />
    </children>
 </AnchorPane>
