--- a/PRG/RetoFinal/src/view/DeleteAccount.fxml
+++ b/PRG/RetoFinal/src/view/DeleteAccount.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.DeleteAccountController">
+<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DeleteAccountController">
    
     <children>
         <Label layoutX="62.0" layoutY="73.0" prefHeight="17.0" prefWidth="56.0" text="Username" />
