--- a/PRG/RetoFinal/src/view/ShopWindow.fxml
+++ b/PRG/RetoFinal/src/view/ShopWindow.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -36,6 +38,13 @@
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#addToCart" text="Add to Cart" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
         </TableView>
       
         <Label layoutX="25.0" layoutY="480.0" prefHeight="17.0" prefWidth="100.0" text="Search game:" />
