--- a/PRG/RetoFinal/src/view/MenuWindow.fxml
+++ b/PRG/RetoFinal/src/view/MenuWindow.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -7,19 +12,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="MenuRoot" prefHeight="270.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MenuWindowController">
+<AnchorPane id="MenuRoot" prefHeight="321.0" prefWidth="482.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MenuWindowController">
     <children>
-        <Button fx:id="Button_Delete" layoutX="66.0" layoutY="83.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="330.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Delete User" onAction="#delete">
+        <Button fx:id="Button_Delete" layoutX="66.0" layoutY="83.0" mnemonicParsing="false" onAction="#delete" prefHeight="36.0" prefWidth="330.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Delete User">
             <font>
                 <Font size="16.0" />
             </font>
         </Button>
-        <Button fx:id="Button_Modify" layoutX="66.0" layoutY="169.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="330.0" style="-fx-border-color: #000000; -fx-background-color: A7C4E5;" text="Modify User" onAction="#modifyVentana">
+        <Button fx:id="Button_Modify" layoutX="66.0" layoutY="161.0" mnemonicParsing="false" onAction="#modifyVentana" prefHeight="36.0" prefWidth="330.0" style="-fx-border-color: #000000; -fx-background-color: A7C4E5;" text="Modify User">
             <font>
                 <Font size="16.0" />
             </font>
         </Button>
-        <Button fx:id="Button_LogOut" layoutX="403.0" layoutY="14.0" mnemonicParsing="false" style="-fx-background-color: #f33f3f; -fx-border-color: #000000; -fx-font-weight: bold;" text="Log Out" onAction="#cerrarVentana">
+        <Button fx:id="Button_LogOut" layoutX="403.0" layoutY="14.0" mnemonicParsing="false" onAction="#cerrarVentana" style="-fx-background-color: #f33f3f; -fx-border-color: #000000; -fx-font-weight: bold;" text="Log Out">
             <font>
                 <Font size="13.0" />
             </font>
@@ -40,5 +45,10 @@
                 <Image url="@../images/person_23dp_789DE5_FILL0_wght400_GRAD0_opsz24.png" />
             </image>
         </ImageView>
+      <Button id="ShopBtn" fx:id="Button_Store" layoutX="66.0" layoutY="246.0" mnemonicParsing="false" onAction="#StoreWindow" prefHeight="36.0" prefWidth="330.0" style="-fx-border-color: #000000; -fx-background-color: A7C4E5;" text="Store">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
