--- a/PRG/RetoFinal/src/view/StoreWindow.fxml
+++ b/PRG/RetoFinal/src/view/StoreWindow.fxml
@@ -56,19 +56,24 @@
         <Label layoutX="510.0" layoutY="480.0" prefHeight="17.0" prefWidth="80.0" text="Platform:" />
         <TextField fx:id="textFieldPlatform" layoutX="590.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
       
-        <Button fx:id="buttonSearch" layoutX="720.0" layoutY="475.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Search" />
+        <!-- Añadir onAction al botón Search -->
+        <Button fx:id="buttonSearch" layoutX="720.0" layoutY="475.0" mnemonicParsing="false" onAction="#searchGames" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Search" />
       
         <Label layoutX="25.0" layoutY="520.0" prefHeight="25.0" prefWidth="150.0" style="-fx-font-weight: bold;" text="Selected game:" />
         <Label fx:id="labelGameInfo" layoutX="180.0" layoutY="520.0" prefHeight="25.0" prefWidth="400.0" style="-fx-text-fill: #5084C1;" text="Select a game" />
-        <Button fx:id="buttonAddToCart" layoutX="603.0" layoutY="554.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="140.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Add to Cart" />
+        
+        <!-- Añadir onAction al botón Add to Cart -->
+        <Button fx:id="buttonAddToCart" layoutX="603.0" layoutY="554.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="35.0" prefWidth="140.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Add to Cart" />
       
         <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="850.0" layoutY="15.0">
             <image>
                 <Image url="@../images/sports_esports_32dp_5084C1_FILL0_wght400_GRAD0_opsz40.png" />
             </image>
         </ImageView>
-        <Button fx:id="buttonCart" layoutX="24.0" layoutY="555.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Cart" />
-        <Button fx:id="buttonExit" layoutX="755.0" layoutY="555.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: F08080; -fx-border-color: #000000;" text="Exit" />
-        <Button fx:id="buttonReview" layoutX="156.0" layoutY="555.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Review" />
+        
+        <!-- Añadir onAction a los demás botones -->
+        <Button fx:id="buttonCart" layoutX="24.0" layoutY="555.0" mnemonicParsing="false" onAction="#handleCartButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Cart" />
+        <Button fx:id="buttonExit" layoutX="755.0" layoutY="555.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: F08080; -fx-border-color: #000000;" text="Exit" />
+        <Button fx:id="buttonReview" layoutX="156.0" layoutY="555.0" mnemonicParsing="false" onAction="#handleReviewButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Review" />
     </children>
 </AnchorPane>
