--- a/PRG/RetoFinal/src/view/CartWindow.fxml
+++ b/PRG/RetoFinal/src/view/CartWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
@@ -90,5 +91,6 @@
                 <Font size="15.0" />
             </font>
         </Label>
+      <DialogPane />
     </children>
 </AnchorPane>
