--- a/PRG/RetoFinal/src/view/StoreWindow.fxml
+++ b/PRG/RetoFinal/src/view/StoreWindow.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +17,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="610.0" prefWidth="913.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ShopWindowController">
+<AnchorPane id="AnchorPane" prefHeight="610.0" prefWidth="913.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ShopWindowController">
     <children>
         <Label layoutX="350.0" layoutY="20.0" prefHeight="44.0" prefWidth="207.0" text="GAME STORE">
             <font>
@@ -48,10 +53,10 @@
         <TextField fx:id="textFieldSearch" layoutX="116.0" layoutY="475.0" prefHeight="25.0" prefWidth="200.0" promptText="Game name..." />
       
         <Label layoutX="320.0" layoutY="480.0" prefHeight="17.0" prefWidth="60.0" text="Genre:" />
-        <TextField fx:id="textFieldGenre" layoutX="380.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
+        <ComboBox fx:id="comboBoxGenre" layoutX="380.0" layoutY="475.0" prefWidth="120.0" promptText="All" />
       
         <Label layoutX="510.0" layoutY="480.0" prefHeight="17.0" prefWidth="80.0" text="Platform:" />
-        <TextField fx:id="textFieldPlatform" layoutX="590.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
+        <ComboBox fx:id="comboBoxPlatform" layoutX="590.0" layoutY="475.0" prefWidth="120.0" promptText="All" />
       
         <!-- Añadir onAction al botón Search -->
         <Button fx:id="buttonSearch" layoutX="720.0" layoutY="475.0" mnemonicParsing="false" onAction="#searchGames" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Search" />
