--- a/PRG/RetoFinal/src/view/AdminWindow.fxml
+++ b/PRG/RetoFinal/src/view/AdminWindow.fxml
@@ -14,34 +14,28 @@
 
 <AnchorPane id="AnchorPane" prefHeight="610.0" prefWidth="913.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminShopController">
     <children>
-        <MenuBar fx:id="menuBar" layoutY="1.0" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="913.0">
-            <menus>
-                <Menu fx:id="menu" mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem fx:id="menuHelp" mnemonicParsing="false" onAction="#helpWindow" text="Help Window" />
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
         <Label layoutX="297.0" layoutY="44.0" prefHeight="44.0" prefWidth="356.0" text="STORE MANAGENENT">
             <font>
                 <Font name="Arial Black" size="28.0" />
             </font>
         </Label>
-        <Label fx:id="labelWelcome" layoutX="25.0" layoutY="46.0" prefHeight="25.0" prefWidth="300.0" text="Welcome, [Admin]" />
-        <Label fx:id="labelBalance" layoutX="25.0" layoutY="73.0" prefHeight="20.0" prefWidth="300.0" style="-fx-text-fill: #5084C1;" text="Balance: 0.00€" />
-        <Label layoutX="25.0" layoutY="92.0" prefHeight="25.0" prefWidth="200.0" style="-fx-font-weight: bold;" text="Available Games" />
+        <Label fx:id="labelWelcome" layoutX="25.0" layoutY="27.0" prefHeight="25.0" prefWidth="300.0" text="Welcome, [Admin]" />
+        <Label fx:id="labelBalance" layoutX="25.0" layoutY="52.0" prefHeight="20.0" prefWidth="300.0" style="-fx-text-fill: #5084C1;" text="Balance: 0.00€" />
+        <Label layoutX="25.0" layoutY="80.0" prefHeight="25.0" prefWidth="200.0" style="-fx-font-weight: bold;" text="Available Games" />
         <TableView id="tableViewGames" fx:id="tableViewGames" layoutX="21.0" layoutY="115.0" prefHeight="350.0" prefWidth="872.0">
             <columns>
-                <TableColumn fx:id="colTitle" prefWidth="250.0" text="Title" />
-                <TableColumn id="col" fx:id="colGenre" prefWidth="120.0" text="Genre" />
-                <TableColumn id="colPlataform" fx:id="colPlatform" prefWidth="120.0" text="Platform" />
-                <TableColumn id="colPrice" fx:id="colPrice" prefWidth="100.0" text="Price (€)" />
-                <TableColumn id="colPegi" fx:id="colPegi" prefWidth="100.0" text="Pegi" />
-                <TableColumn id="colStock" fx:id="colStock" prefWidth="100.0" text="Stock" />
-                <TableColumn id="colCompany" fx:id="colCompanyName" prefWidth="119.0" text="Company" />
-                <TableColumn id="colReleaseDate" fx:id="colReleaseDate" prefWidth="107.0" text="Release Date" />
+                <TableColumn fx:id="colTitle"  prefWidth="250.0" text="Title" />
+                <TableColumn id="col" fx:id="colGenre"  prefWidth="120.0" text="Genre" />
+                <TableColumn id="colPlataform" fx:id="colPlatform"  prefWidth="120.0" text="Platform" />
+                <TableColumn id="colPrice" fx:id="colPrice"  prefWidth="100.0" text="Price (€)" />
+                <TableColumn id="colPegi" fx:id="colPegi"  prefWidth="100.0" text="Pegi" />
+                <TableColumn id="colStock" fx:id="colStock"  prefWidth="100.0" text="Stock" />
+                <TableColumn id="colCompany" fx:id="colCompanyName"  prefWidth="119.0" text="Company" />
+                <TableColumn id="colReleaseDate" fx:id="colReleaseDate"  prefWidth="107.0" text="Release Date" />
             </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
             <contextMenu>
                 <ContextMenu>
                     <items>
@@ -64,5 +58,14 @@
         <Button fx:id="buttonExit" layoutX="755.0" layoutY="555.0" mnemonicParsing="false" onAction="#exit" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: F08080; -fx-border-color: #000000;" text="Exit" />
         <Button fx:id="buttonModify" layoutX="165.0" layoutY="555.0" mnemonicParsing="false" onAction="#modifyGame" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Modify Game" />
         <Button fx:id="buttonDelete" layoutX="297.0" layoutY="555.0" mnemonicParsing="false" onAction="#deleteGame" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: 789DE5; -fx-border-color: #000000;" text="Delete Game" />
+        <MenuBar layoutY="-1.0" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="913.0">
+            <menus>
+                <Menu mnemonicParsing="false" text="Help">
+                    <items>
+                        <MenuItem fx:id="menuHelp" mnemonicParsing="false" onAction="#helpWindow" text="Help Window" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
     </children>
 </AnchorPane>
